--- a/style.css
+++ b/style.css
@@ -1,110 +1,90 @@
-
-body
-{
+body {
   margin: 0px;
   text-align: center;
   font-family: sans-serif;
   background-color: #DBEDF3;
 }
 
-h1
-{
-  font-size: 5.625rem;
-  color: cyan;
-  margin: 50px auto 50px auto;
-  font-family: 'Dancing Script', cursive;
-  font-weight:normal;
-
-}
-hr
-{
-  border:solid #00818A 3px;
+hr {
+  border: solid #00818A 3px;
   border-bottom: none;
   width: 30%;
-  margin: 100px auto 100px auto;
+  margin: 80px auto 80px auto;
 }
 
-.intro
-{
-  margin: auto;
-  width: 30%;
-  padding-bottom: 10px;
-}
-
-
-.pro
-{
+h2 {
   font-weight: bold;
-  font-family: 'Raleway', sans-serif;
-  color: cyan;
-  font-size: 1.6rem;
-}
-h2
-{
-  font-weight: normal;
   font-size: 2.5rem;
   color: #126E82
 }
 
-h3
-{
+h3 {
   font-size: 1.3rem;
   color: #126E82
-
 }
 
-a
-{
-  font-weight: bold;
-  color: #404B69;
-  margin: 10px 20px;
-  text-decoration: none;
-  font-size: 1rem;
+.navbar {
+  background-color: #0b1321;
 }
 
-a:hover
-{
-  color: cyan;
-  font-size: 1.5rem;
+.nav-item {
+  padding: 5px;
 }
 
-.cloud
-{
+.top-container {
+  margin-top: 0px;
+  background-color: #0f1f38;
+  padding-bottom: 0px;
+}
+
+.cloud {
   position: relative;
-  padding-top:50px;
-  height: 15.0rem;
-
+  padding-top: 34px;
+  height: 16.0rem;
+  width: 14rem;
+  opacity: 0.4;
 }
 
-
-.robot
-{
-  padding-right: 30px;
-  float: left;
-  width: 18rem;
+.name {
+  font-size: 5.625rem;
+  color: cyan;
+  margin: 30px auto 55px auto;
+  font-family: 'Dancing Script', cursive;
+  font-weight: normal;
 }
 
-.profile-img
-{
-  padding-top: 5rem;
-  width: 20rem;
+.pro {
+  font-weight: bold;
+  font-family: 'Raleway', sans-serif;
+  color: cyan;
+  font-size: 1.6rem;
+  padding-bottom: 3.5rem;
 }
-.mountain
-{
+
+.mountain {
   position: relative;
   width: 100%;
   height: 6.25rem;
 }
 
-.programmer
-{
-  float: right;
-  position: relative;
-  width: 280px;
+.intro {
+  font-size: 1.1rem;
+  margin: auto;
+  width: 30%;
+  line-height: 2;
 }
 
-.skill-row
-{
+.profile-img {
+  padding-top: 5rem;
+  padding-bottom: 2rem;
+  width: 20rem;
+}
+
+.skills {
+  padding-bottom: 30px;
+}
+
+.skill-row {
   padding: 30px;
   text-align: left;
   width: 50%;
@@ -112,59 +92,89 @@ a:hover
   line-height: 2;
 }
 
-.top-container
-{
-  margin-top: 0px;
-  background-color: #283149;
-  padding-bottom: 60px
+.machine-learning-img {
+  padding-right: 30px;
+  float: left;
+  width: 18rem;
 }
-.middle-container
-{
 
+.programmer {
+  float: right;
+  position: relative;
+  width: 280px;
 }
-.bottom-container
-{
+
+.bottom-container {
   margin-top: 60px;
   background-color: #00818A;
   padding: 20px;
 }
 
-.contact-message
-{
+.get-in-touch {
+  font-size: 1.7rem;
+}
+
+.interested {
+  font-size: 1.2rem;
+}
+
+.contact-message {
   width 40%;
   margin: 40px auto 60px auto;
 }
 
-.btn {
-  background: #3498db;
-  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-  background-image: -o-linear-gradient(top, #3498db, #2980b9);
-  background-image: linear-gradient(to bottom, #3498db, #2980b9);
-  -webkit-border-radius: 15;
-  -moz-border-radius: 15;
-  border-radius: 15px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 18px;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
+.contact-me-btn {
+  background-color: #A4EBF3;
+  color: #404B69;
+  font-weight: bold;
 }
 
-.btn:hover {
-  background: #0091ff;
-  background-image: -webkit-linear-gradient(top, #0091ff, #4cc0ff);
-  background-image: -moz-linear-gradient(top, #0091ff, #4cc0ff);
-  background-image: -ms-linear-gradient(top, #0091ff, #4cc0ff);
-  background-image: -o-linear-gradient(top, #0091ff, #4cc0ff);
-  background-image: linear-gradient(to bottom, #0091ff, #4cc0ff);
-  text-decoration: none;
+.socials {
+  position: relative;
+  font-size: 20px;
+  padding: 0 20px 0 0;
+  color: #322d6e;
 }
 
-.copyright
-{
-  color:  #DBEDF3;
+.socials:hover {
+  color: #322d6e;
+  font-size: 30px;
+}
+
+.copyright {
+  color: #DBEDF3;
   font-size: 0.69rem;
   padding-top: 20px;
+}
+
+@media (max-width: 974px) {
+  .cloud {
+    position: relative;
+    padding-top: 34px;
+    height: 14.0rem;
+    width: 12rem;
+    opacity: 0.4;
+  }
+
+  .name {
+    font-size: 4rem;
+    color: cyan;
+    margin: 30px auto 55px auto;
+    font-family: 'Dancing Script', cursive;
+    font-weight: normal;
+  }
+
+  .pro {
+    font-weight: bold;
+    font-family: 'Raleway', sans-serif;
+    color: cyan;
+    font-size: 1.5rem;
+    padding-bottom: 3.5rem;
+  }
+
+  .mountain {
+    position: relative;
+    width: 100%;
+    height: 3.9rem;
+  }
 }
